4.7.3:
  * "private" is a keyword in C++.  (Duncan Grisby)
  * setup.py should install "bsddb.h".  (Duncan Grisby)
  * "DB_remove" memory corruption & crash.  (Duncan Grisby)
  * Under Python 3.0, you can't use string keys/values, but
    bytes ones. Print the right error message.
  * "DB.has_key" allowed transactions as a positional parameter.
    We allow, now, transactions as a keyword parameter also, as
    documented.

4.7.2:
  * Solved a race condition in Replication Manager testcode.
  * Changing any python code, automatically regenerates the
    Python3 version. The master version is Python2.
  * Compatibility with Python 3.0.
  * Solved a crash when DB handle creation fails.
    STINNER Victor - http://bugs.python.org/issue3307
  * Improve internal error checking, as suggested by Neal Norwitz
    when reviewing commit 63207 in Python SVN.
  * Routines without parameters should be defined so, as
    suggested by Neal Norwitz when reviewing commit 63207 in Python SVN.
    The resulting code is (marginally) faster, smaller and clearer.
  * Routines with a simple object parameter are defines so, as
    suggested by Neal Norwitz when reviewing commit 63207 in Python SVN.
    The resulting code is (marginally) faster, smaller and clearer.
  * Routines taking objects as arguments can parse them better, as
    suggested by Neal Norwitz when reviewing commit 63207 in Python SVN.
    The resulting code is (marginally) faster, smaller and clearer.
  * Improve testsuite behaviour under MS Windows.
  * Use ABC (Abstract Base Classes) under Python 2.6 and 3.0.
  * Support for "relative imports".
  * Replication testcode behaves better in heavily loaded machines.

4.7.1:
  * Workaround a problem with un-initialized threads with the
    replication callback.
  * Export "DBRepUnavailError" exception.
  * Get rid of Berkeley DB 3.3 support. Rationale:
    http://mailman.argo.es/pipermail/pybsddb/2008-March/000019.html