@@ -4,9 +4,12 @@
   * "DB_remove" memory corruption & crash.  (Duncan Grisby)
   * Under Python 3.0, you can't use string keys/values, but
     bytes ones. Print the right error message.
-  * "DB.has_key" allowed transactions as a positional parameter.
+  * "DB.has_key()" allowed transactions as a positional parameter.
     We allow, now, transactions as a keyword parameter also, as
     documented.
+  * Correct "DB.associate()" parameter order in the documentation.
+  * "DB.append()" recognizes "txn" both as a positional and a
+    keyword parameter.
 
 4.7.2:
   * Solved a race condition in Replication Manager testcode.
